# venvpp2

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README  README.md  conan_setup.py  conanfile.py  conanfile.txt  conf  main.cpp  old_conan_setup.py  profile_clang19  profile_gcc13  profile_vs2022  requirements.txt
env/: setup.bat  setup.sh
profiles/: linux-clang  linux-gcc  macos-arm64  macos-x64  windows-msvc
scripts/: requirements.txt
scripts/env/: setup.bat  setup.sh
src/: main.cpp
tools/: install_valgrind.sh  run_coverage.py  run_sanitizer.py  run_unit_tests.py  run_valgrind.py
